--- a/checkeng/dialogs/choose/choose.ui
+++ b/checkeng/dialogs/choose/choose.ui
@@ -52,7 +52,11 @@
       </widget>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="vl_2"/>
+      <layout class="QVBoxLayout" name="vl_2">
+       <item>
+        <widget class="QWidget" name="w_tasks" native="true"/>
+       </item>
+      </layout>
      </item>
      <item>
       <spacer name="verticalSpacer">
