--- a/checkeng/dialogs/test1/test1.ui
+++ b/checkeng/dialogs/test1/test1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>712</width>
-    <height>283</height>
+    <width>960</width>
+    <height>540</height>
    </rect>
   </property>
   <property name="font">
@@ -24,198 +24,54 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="0">
-    <widget class="QLabel" name="l_total">
-     <property name="font">
-      <font>
-       <family>DejaVu Sans</family>
-       <pointsize>22</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QLabel" name="l_question">
      <property name="text">
-      <string>Total questions: </string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      <string/>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="l_name">
-     <property name="font">
-      <font>
-       <family>DejaVu Sans</family>
-       <pointsize>22</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
+   <item>
+    <widget class="QLabel" name="l_first">
      <property name="text">
-      <string>Name: </string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      <string>TextLabel</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="2">
-    <widget class="QLabel" name="l_result">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="font">
-      <font>
-       <family>DejaVu Sans</family>
-       <pointsize>30</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
+   <item>
+    <widget class="QLabel" name="l_second">
      <property name="text">
-      <string>Your Result</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
+      <string>TextLabel</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
-    <widget class="QLabel" name="m_total">
-     <property name="font">
-      <font>
-       <family>DejaVu Sans</family>
-       <pointsize>22</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
+   <item>
+    <widget class="QLabel" name="l_third">
      <property name="text">
-      <string>20</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="QLabel" name="m_name">
-     <property name="font">
-      <font>
-       <family>DejaVu Sans</family>
-       <pointsize>22</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Имя</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0">
-    <widget class="QLabel" name="l_incorrect">
-     <property name="font">
-      <font>
-       <family>DejaVu Sans</family>
-       <pointsize>22</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Incorrect answers: </string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="l_correct">
-     <property name="font">
-      <font>
-       <family>DejaVu Sans</family>
-       <pointsize>22</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Сorrect answers: </string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="1">
-    <widget class="QLabel" name="m_incorrect">
-     <property name="font">
-      <font>
-       <family>DejaVu Sans</family>
-       <pointsize>22</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>5</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QLabel" name="m_correct">
-     <property name="font">
-      <font>
-       <family>DejaVu Sans</family>
-       <pointsize>22</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>15</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0">
-    <widget class="QLabel" name="l_percent">
-     <property name="font">
-      <font>
-       <family>DejaVu Sans</family>
-       <pointsize>22</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Percent of correct results: </string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="1">
-    <widget class="QLabel" name="m_percent">
-     <property name="font">
-      <font>
-       <family>DejaVu Sans</family>
-       <pointsize>22</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>75%</string>
+      <string>TextLabel</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>Test1</sender>
+   <signal>rejected()</signal>
+   <receiver>Test1</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>479</x>
+     <y>269</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>479</x>
+     <y>269</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
