CheckEng | edited test1

--- a/checkeng/dialogs/test1/test1.ui
+++ b/checkeng/dialogs/test1/test1.ui
@@ -28,7 +28,7 @@
    <item>
     <widget class="QLabel" name="l_question">
      <property name="text">
-      <string/>
+      <string>fffffffff</string>
      </property>
     </widget>
    </item>
