CheckEng | fix addtasks cancel

--- a/checkeng/dialogs/choose/choose.ui
+++ b/checkeng/dialogs/choose/choose.ui
@@ -19,7 +19,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string notr="true">Choose</string>
+   <string notr="true">CheckEng</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
